--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,14 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.{scss,sass,css}]
+indent_style = space
+indent_size = 2
+
+[*.html]
+indent_style = space
+indent_size = 2
+
 [*.ts]
 quote_type = single
 ij_typescript_use_double_quotes = false
