implement modern Angular auth system with corrected interfaces
- Fix TypeScript interfaces to match backend DTOs (auth/user)
- Implement AuthService
- Add functional HTTP interceptor for automatic token management
- Update ApiService to work with interceptor pattern
- Refactor RegisterComponent for real API integration with validation UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,27 @@
   "prettier.useEditorConfig": true,
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
-  "files.trimFinalNewlines": true
+  "files.trimFinalNewlines": true,
+  "auto-close-tag.enableAutoCloseTag": true,
+  "auto-close-tag.enableAutoCloseSelfClosingTag": true,
+  "auto-close-tag.activationOnLanguage": [
+    "xml",
+    "php",
+    "blade",
+    "ejs",
+    "jinja",
+    "javascript",
+    "javascriptreact",
+    "typescriptreact",
+    "plaintext",
+    "markdown",
+    "vue",
+    "liquid",
+    "erb",
+    "lang-cfml",
+    "cfml",
+    "HTML (EEx)",
+    "HTML (Eex)",
+    "plist"
+  ]
 }
